// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout goldens > careerBacon {"searchId":105} @beside 1`] = `
{
  "attrs": "a441dd0f1e3c436b",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @phone 1`] = `
{
  "attrs": "bc18463551eff043",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @stacked 1`] = `
{
  "attrs": "72794f1f81961a6a",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "15027ba948420857",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @beside 1`] = `
{
  "attrs": "42dfa00455a8314d",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @phone 1`] = `
{
  "attrs": "2fead93516f365f3",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @stacked 1`] = `
{
  "attrs": "463bcf060c117e56",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "15027ba948420857",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @beside 1`] = `
{
  "attrs": "09ee6cfdeefdb18a",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @phone 1`] = `
{
  "attrs": "b22cb21149d910c4",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @stacked 1`] = `
{
  "attrs": "b4ceb022f98bfe34",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "648bf4fbe439bc1f",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @beside 1`] = `
{
  "attrs": "316eb2eb54b0c6b0",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @phone 1`] = `
{
  "attrs": "f8be008efc0a5725",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @stacked 1`] = `
{
  "attrs": "c0c73e66d0bbcceb",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "648bf4fbe439bc1f",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @beside 1`] = `
{
  "attrs": "09ee6cfdeefdb18a",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @phone 1`] = `
{
  "attrs": "b22cb21149d910c4",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @stacked 1`] = `
{
  "attrs": "b4ceb022f98bfe34",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "90bd0c6493ca51c1",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @beside 1`] = `
{
  "attrs": "316eb2eb54b0c6b0",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @phone 1`] = `
{
  "attrs": "f8be008efc0a5725",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @stacked 1`] = `
{
  "attrs": "c0c73e66d0bbcceb",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "90bd0c6493ca51c1",
}
`;

exports[`layout goldens > degScatter {"searchId":105} @beside 1`] = `
{
  "attrs": "4d20c338f8d2acc3",
  "decor": "107fa10bef7b5590",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @phone 1`] = `
{
  "attrs": "baf50653e651520f",
  "decor": "e13a191c126757d1",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @stacked 1`] = `
{
  "attrs": "be9bc16e7cf60b5b",
  "decor": "6cd3c2069bf2e706",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @beside 1`] = `
{
  "attrs": "c8bf38cb158424c8",
  "decor": "107fa10bef7b5590",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @phone 1`] = `
{
  "attrs": "c22552b8c6d80503",
  "decor": "e13a191c126757d1",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @stacked 1`] = `
{
  "attrs": "bbc5e95b2149c4b9",
  "decor": "6cd3c2069bf2e706",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @beside 1`] = `
{
  "attrs": "d24cd8813c5231ad",
  "decor": "e6d8412e00a64407",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @phone 1`] = `
{
  "attrs": "6a1ffeb06a92b56c",
  "decor": "2a27d120132687d0",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @stacked 1`] = `
{
  "attrs": "8b31969ae0fe293b",
  "decor": "f20d5e7891f7012b",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @beside 1`] = `
{
  "attrs": "e1235735d23e91e4",
  "decor": "489e57921ba2afbc",
  "delays": "f8bc069d2e84086c",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @phone 1`] = `
{
  "attrs": "862afa611f8a38fb",
  "decor": "429064ca4c96cba6",
  "delays": "743e57736a443af0",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @stacked 1`] = `
{
  "attrs": "bdf5fd523567f731",
  "decor": "f6e0c23f65beca63",
  "delays": "cd51a73494f8ee30",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @beside 1`] = `
{
  "attrs": "9b3202e0dbe81b8f",
  "decor": "489e57921ba2afbc",
  "delays": "f8bc069d2e84086c",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @phone 1`] = `
{
  "attrs": "e6d3df089bc793bb",
  "decor": "429064ca4c96cba6",
  "delays": "743e57736a443af0",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @stacked 1`] = `
{
  "attrs": "f6771a10172a1414",
  "decor": "f6e0c23f65beca63",
  "delays": "cd51a73494f8ee30",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @beside 1`] = `
{
  "attrs": "39fea7a3c8a8e73c",
  "decor": "e6d8412e00a64407",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @phone 1`] = `
{
  "attrs": "e7cb47544743b203",
  "decor": "2a27d120132687d0",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @stacked 1`] = `
{
  "attrs": "1866ea9753316b3c",
  "decor": "f20d5e7891f7012b",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @beside 1`] = `
{
  "attrs": "49bda4dc7a4ea921",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @phone 1`] = `
{
  "attrs": "78186a5ab1b0b22b",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @stacked 1`] = `
{
  "attrs": "d6348d9361ca9bdb",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @beside 1`] = `
{
  "attrs": "159b3a141f9c032e",
  "decor": "d05ae7ffdc3cae20",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "e7d696949a744152",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @phone 1`] = `
{
  "attrs": "94d463ad9a4d0e9c",
  "decor": "ace78b214483d2e1",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "2486ade13d33b1a1",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @stacked 1`] = `
{
  "attrs": "0b8320caaf9280fa",
  "decor": "0796d37cb912cc4e",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "e2c9d741fc50e3fe",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @beside 1`] = `
{
  "attrs": "194fc16fb35ff4c1",
  "decor": "b2d4b14b84f928d7",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @phone 1`] = `
{
  "attrs": "bc6c8d3efe394f5a",
  "decor": "de5b76dbda656f3b",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @stacked 1`] = `
{
  "attrs": "4846e820ab18ae4b",
  "decor": "16236ae855f2a329",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > outro {"playhead":2006} @beside 1`] = `
{
  "attrs": "e259fa82caeff868",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "f07e8886d69f44b8",
}
`;

exports[`layout goldens > outro {"playhead":2006} @phone 1`] = `
{
  "attrs": "b2d5e09e8fb63d86",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "3137933911a92fa8",
}
`;

exports[`layout goldens > outro {"playhead":2006} @stacked 1`] = `
{
  "attrs": "d09b9c6322846160",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "68523910c7e3056c",
}
`;

exports[`layout goldens > outro null @beside 1`] = `
{
  "attrs": "a178fed3e0e6e94c",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "c031769f740452b6",
}
`;

exports[`layout goldens > outro null @phone 1`] = `
{
  "attrs": "7079b16bea81ecb9",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "59efcd1d42df7b1c",
}
`;

exports[`layout goldens > outro null @stacked 1`] = `
{
  "attrs": "95a43730c10a673b",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "5ffb5268d13877bd",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @beside 1`] = `
{
  "attrs": "6a7fce04f0d0ae68",
  "decor": "0a45276dafcd0377",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "f07e8886d69f44b8",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @phone 1`] = `
{
  "attrs": "d1a643a0e40c357c",
  "decor": "ee7586b527463ad2",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "3137933911a92fa8",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @stacked 1`] = `
{
  "attrs": "3a2c0bf1e83dc90a",
  "decor": "f7b906cb29583e39",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "68523910c7e3056c",
}
`;

exports[`layout goldens > raceClose null @beside 1`] = `
{
  "attrs": "484ae736c0b70174",
  "decor": "f158f177c4115115",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "0a546b0343ce8b62",
}
`;

exports[`layout goldens > raceClose null @phone 1`] = `
{
  "attrs": "df5607a6a89c8643",
  "decor": "4f80b7f825917477",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "182bc02f27bb6162",
}
`;

exports[`layout goldens > raceClose null @stacked 1`] = `
{
  "attrs": "e30b159d87c36442",
  "decor": "d473000f970a6c91",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "7281bd7494f49223",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @beside 1`] = `
{
  "attrs": "40d483e652cc234c",
  "decor": "0032612fd9078e3b",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @phone 1`] = `
{
  "attrs": "a95efe3a6104e11c",
  "decor": "64d0261e4f625645",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @stacked 1`] = `
{
  "attrs": "2b594184b2f7c13f",
  "decor": "b525872360410555",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFull null @beside 1`] = `
{
  "attrs": "40d483e652cc234c",
  "decor": "0032612fd9078e3b",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFull null @phone 1`] = `
{
  "attrs": "a95efe3a6104e11c",
  "decor": "64d0261e4f625645",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFull null @stacked 1`] = `
{
  "attrs": "2b594184b2f7c13f",
  "decor": "b525872360410555",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @beside 1`] = `
{
  "attrs": "a35b775df0564abb",
  "decor": "0032612fd9078e3b",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @phone 1`] = `
{
  "attrs": "a53d5eaf73089ad1",
  "decor": "64d0261e4f625645",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @stacked 1`] = `
{
  "attrs": "419e6d34b26f5269",
  "decor": "b525872360410555",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFuture null @beside 1`] = `
{
  "attrs": "3be800b2ff2342e7",
  "decor": "b6fce806a0b6d022",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "baa62b8efd28bccd",
}
`;

exports[`layout goldens > raceFuture null @phone 1`] = `
{
  "attrs": "e029c636ee3affb3",
  "decor": "d56db62635973cfb",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "4e7e7e8dcddf433c",
}
`;

exports[`layout goldens > raceFuture null @stacked 1`] = `
{
  "attrs": "c7ecd744ad8f777c",
  "decor": "e7522fb9a0289965",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5738335dca2809d7",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @beside 1`] = `
{
  "attrs": "a3c90bfd86302f2d",
  "decor": "d0f985d7da9fd74c",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "6f8c123077a61174",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @phone 1`] = `
{
  "attrs": "03615dbd8620f81e",
  "decor": "8536b702b51464fe",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "603a762f8da4c554",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @stacked 1`] = `
{
  "attrs": "98547cc6d30f2efe",
  "decor": "a454dbe6701ed7f5",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "0c6a09f391f72dc9",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @beside 1`] = `
{
  "attrs": "de119c7751a48a19",
  "decor": "d0f985d7da9fd74c",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "9afe89bf5acd5af0",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @phone 1`] = `
{
  "attrs": "968c8089d95b9b56",
  "decor": "8536b702b51464fe",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a17d0ad72b49a8aa",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @stacked 1`] = `
{
  "attrs": "a41d4eec1c298d67",
  "decor": "a454dbe6701ed7f5",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "8b0358b30eebcb40",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @beside 1`] = `
{
  "attrs": "e89cdc56bc043dcd",
  "decor": "e8848fcf6d8df0bb",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "2560ef22c8b64d11",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @phone 1`] = `
{
  "attrs": "dd3cf59b5aaf3bb0",
  "decor": "ac4338385ebe08db",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "dea7faaffed54966",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @stacked 1`] = `
{
  "attrs": "cc001e5884168407",
  "decor": "9f114d828033ed28",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5b19ddb8fabff428",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @beside 1`] = `
{
  "attrs": "40d483e652cc234c",
  "decor": "0032612fd9078e3b",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @phone 1`] = `
{
  "attrs": "a95efe3a6104e11c",
  "decor": "64d0261e4f625645",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @stacked 1`] = `
{
  "attrs": "2b594184b2f7c13f",
  "decor": "b525872360410555",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceRecent null @beside 1`] = `
{
  "attrs": "51276fbb460cdd87",
  "decor": "a2bfc25bef8408b3",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "2d80856a7a49b4e4",
}
`;

exports[`layout goldens > raceRecent null @phone 1`] = `
{
  "attrs": "8f1048420f01791b",
  "decor": "a0ca8fcc649e9a92",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "f0596c752e115b44",
}
`;

exports[`layout goldens > raceRecent null @stacked 1`] = `
{
  "attrs": "01edce4b2b07d9bc",
  "decor": "a4fb3d183fb8d9a3",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "00d49dfbfd22ac56",
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @beside 1`] = `
{
  "attrs": "9a9b42d8e47e8777",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @phone 1`] = `
{
  "attrs": "9a9b42d8e47e8777",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @stacked 1`] = `
{
  "attrs": "9a9b42d8e47e8777",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @beside 1`] = `
{
  "attrs": "f1bbcb60611bc008",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @phone 1`] = `
{
  "attrs": "81085b556333fab4",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @stacked 1`] = `
{
  "attrs": "f1bbcb60611bc008",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @beside 1`] = `
{
  "attrs": "73d2c7fedede94a0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @phone 1`] = `
{
  "attrs": "43179e09d3d67ac4",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @stacked 1`] = `
{
  "attrs": "73d2c7fedede94a0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @beside 1`] = `
{
  "attrs": "9a9b42d8e47e8777",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @phone 1`] = `
{
  "attrs": "9a9b42d8e47e8777",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @stacked 1`] = `
{
  "attrs": "9a9b42d8e47e8777",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @beside 1`] = `
{
  "attrs": "f1bbcb60611bc008",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @phone 1`] = `
{
  "attrs": "81085b556333fab4",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @stacked 1`] = `
{
  "attrs": "f1bbcb60611bc008",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @beside 1`] = `
{
  "attrs": "73d2c7fedede94a0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @phone 1`] = `
{
  "attrs": "43179e09d3d67ac4",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @stacked 1`] = `
{
  "attrs": "73d2c7fedede94a0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @beside 1`] = `
{
  "attrs": "cf26c439e56a3872",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @phone 1`] = `
{
  "attrs": "a06c9ea821ace625",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "ee6ec1fcd0eb89c5",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @beside 1`] = `
{
  "attrs": "eb0cfde86f9e95b7",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @phone 1`] = `
{
  "attrs": "0af0f68730acccfb",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "93102da6f985c3b4",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @beside 1`] = `
{
  "attrs": "602d76b65583740b",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @phone 1`] = `
{
  "attrs": "a32bcdd21e0198dc",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "e7ca79f6df67122e",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @beside 1`] = `
{
  "attrs": "0e0276a5bf3582ea",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @phone 1`] = `
{
  "attrs": "c80222c49f962ba3",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "976dce3117adb4b0",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @beside 1`] = `
{
  "attrs": "602d76b65583740b",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @phone 1`] = `
{
  "attrs": "a32bcdd21e0198dc",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "e7ca79f6df67122e",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @beside 1`] = `
{
  "attrs": "0e0276a5bf3582ea",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @phone 1`] = `
{
  "attrs": "c80222c49f962ba3",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "976dce3117adb4b0",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @beside 1`] = `
{
  "attrs": "0c5d739a1c6498fd",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @phone 1`] = `
{
  "attrs": "ad61a485ce196903",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "766dd6aeaa3e4fe0",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @beside 1`] = `
{
  "attrs": "7045ba349fb851f7",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @phone 1`] = `
{
  "attrs": "4cbe63afae96ecd3",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @stacked 1`] = `
{
  "attrs": "88cb7bae26c1b107",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @beside 1`] = `
{
  "attrs": "7b2ee1f8cd66f21a",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @phone 1`] = `
{
  "attrs": "6dbc59b688ee426b",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @stacked 1`] = `
{
  "attrs": "a5ae1f71db01f67c",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @beside 1`] = `
{
  "attrs": "f655ce55fa9656b0",
  "decor": "080cb30d9888a7d1",
  "delays": null,
  "trailDelays": null,
  "trails": "86b46b362892c32c",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @phone 1`] = `
{
  "attrs": "daf47622688ff175",
  "decor": "a72b86267340a5d6",
  "delays": null,
  "trailDelays": null,
  "trails": "863c09ed0cd82558",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @stacked 1`] = `
{
  "attrs": "a42300bbdcfcba9d",
  "decor": "7b04c5ef1e53acbd",
  "delays": null,
  "trailDelays": null,
  "trails": "5b995767da8e8694",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @beside 1`] = `
{
  "attrs": "0281be4660de7fe5",
  "decor": "080cb30d9888a7d1",
  "delays": null,
  "trailDelays": null,
  "trails": "af06ea4ed5fb4418",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @phone 1`] = `
{
  "attrs": "4348314239fa1656",
  "decor": "a72b86267340a5d6",
  "delays": null,
  "trailDelays": null,
  "trails": "58f1c21582e9e72d",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @stacked 1`] = `
{
  "attrs": "fb27ac123d827343",
  "decor": "7b04c5ef1e53acbd",
  "delays": null,
  "trailDelays": null,
  "trails": "d672d72b6ffa9433",
}
`;

exports[`layout goldens > titleGalaxy null @beside 1`] = `
{
  "attrs": "49bda4dc7a4ea921",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @phone 1`] = `
{
  "attrs": "78186a5ab1b0b22b",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @stacked 1`] = `
{
  "attrs": "d6348d9361ca9bdb",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;
